--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mui/material": "^5.16.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "flowbite": "^2.5.1",
-    "next": "14.2.5",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.12"
